# dvc-render

./: .cookiecutter.json  .cruft.json  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  README.rst  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.cfg  setup.cfg.rej  sitemap.xml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: gen_ref_pages.py  index.md
dvc/render/: vega.py
reference/dvc_render/: index.html
reference/dvc_render/base/: index.html
reference/dvc_render/exceptions/: index.html
reference/dvc_render/html/: index.html
reference/dvc_render/image/: index.html
reference/dvc_render/markdown/: index.html
reference/dvc_render/plotly/: index.html
reference/dvc_render/table/: index.html
reference/dvc_render/utils/: index.html
reference/dvc_render/vega/: index.html
reference/dvc_render/vega_templates/: index.html
search/: search_index.json
src/dvc_render/: __init__.py  base.py  exceptions.py  html.py  image.py  markdown.py  plotly.py  table.py  utils.py  vega.py  vega_templates.py
tests/: test_html.py  test_image.py  test_markdown.py  test_parallel_coordinates.py  test_plotly.py  test_renderer.py  test_table.py  test_templates.py  test_vega.py
