[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "dvc-render"
description = "Dvc Render"
readme = "README.rst"
license = {text = "Apache-2.0"}
authors = [{ name = "Iterative", email = "support@dvc.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

[project.urls]
Issues = "https://github.com/iterative/dvc-render/issues"
Source = "https://github.com/iterative/dvc-render"

[project.optional-dependencies]
docs = [
    "mkdocs==1.5.2",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-material==9.3.1",
    "mkdocs-section-index==0.3.6",
    "mkdocstrings-python==1.6.3",
]
tests = [
    "pytest==7.2.0",
    "pytest-sugar==0.9.5",
    "pytest-cov==3.0.0",
    "pytest-mock==3.8.2",
    "mypy==0.971",
]
dev = [
    "dvc-render[tests]",
    "dvc-render[docs]",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["dvc_render", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@overload",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
check_untyped_defs = false
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "tabulate"
]
ignore_missing_imports = true


<<<<<<<
[tool.pylint.format]
max-line-length = 88

[tool.pylint.message_control]
enable = ["c-extension-no-member", "no-else-return"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "invalid-name",
  "R0801",
  "C0415"
]

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"

=======
>>>>>>>
[tool.codespell]
ignore-words-list = " "
